--- a/fend-project-memory-game-master/css/app.css
+++ b/fend-project-memory-game-master/css/app.css
@@ -17,7 +17,8 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ffffff url('../img/geometry2.png');
+    /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
 
@@ -36,7 +37,6 @@ h1 {
 /*
  * Styles for the deck of cards
  */
-
 .deck {
     width: 660px;
     min-height: 680px;
@@ -88,7 +88,6 @@ h1 {
 /*
  * Styles for the Score Panel
  */
-
 .score-panel {
     text-align: left;
     width: 345px;
@@ -112,53 +111,85 @@ h1 {
     cursor: pointer;
 }
 
-.timer1{
+.timer1 {
     display: inline;
     margin-left: 50px;
 }
 
-
-.card.animate{
+.card.animate {
     animation: shake 0.5s;
     -webkit-animation: shake 0.5s;
 }
 
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
 
-  .modal{
-      display: flex!important;
-      position: fixed;
-      visibility: visible;    
-  }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
 
-  .modal-body p{
-      margin-left: 50px;
-  }
-   .modal.hide{
-      visibility: hidden;
-      display: none;
-  } 
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
 
-  .modal-body.star{
-      align-self: flex-end;
-  }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
 
-p.star{
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
+.modal {
+    display: flex !important;
+    position: fixed;
+    visibility: visible;
+}
+
+.modal-body p {
+    margin-left: 50px;
+}
+
+.modal.hide {
+    visibility: hidden;
+    display: none;
+}
+
+.modal-body.star {
+    align-self: flex-end;
+}
+
+p.star {
     list-style-type: none;
 }
 
-span#stars{
+span#stars {
     display: inline-flex;
 }
