--- a/mws-restaurant-stage-1/css/styles.css
+++ b/mws-restaurant-stage-1/css/styles.css
@@ -129,7 +129,7 @@ nav h1 a {
 }
 
 #breadcrumb {
-  padding: 10px 40px 16px;
+  padding: 10px 0px 16px;
   list-style: none;
   background-color: #eee;
   font-size: 17px;
@@ -140,6 +140,7 @@ nav h1 a {
 /* Display list items side by side */
 #breadcrumb li {
   display: inline;
+  padding-left: 40px;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -392,15 +393,6 @@ nav h1 a {
 }
 
 @media all and (min-width: 991px) {
-  #restaurants-list li {
-    width: 25%;
-  }
-
-  section#map-container {
-
-    position: relative;
-    width: 100vw;
-  }
 
   .inside #map-container {
     background: blue none repeat scroll 0 0;
